# av-plugin-projectm-wasm

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
js/: pre-js.js
js/pre-js/: post.js
js/presets/: pre.js
scripts/: build-all.sh  build-debug.sh  build-dist.sh  build-docs.sh  build-presets.sh
src/: FPSLimiter.cpp  FPSLimiter.h  Main.cpp  Settings.cpp  Settings.h
templates/: shell_minimal.html
